# reflect-health-demo

./: .gitignore  README.md  additional_notes.md  package-lock 2.json  start.sh  stop.sh  test-elevenlabs-browser.js
.cursor/plans/: app_context_handoff_bd860ce2.plan.md
backend/: .dockerignore  pyproject.toml  requirements.txt  seed_data.py
backend/app/: config.py  database.py  main.py
backend/app/common/: audit.py  error_handlers.py  exceptions.py  redact.py  schemas.py
backend/app/middleware/: auth.py  cors.py  timing.py
backend/app/models/: audit_log.py  call_record.py  claim.py  member.py  prior_auth.py  provider.py  qa_review.py  user.py
backend/app/modules/admin/: routes.py
backend/app/modules/auth/: dependencies.py  jwt.py  routes.py  schemas.py
backend/app/modules/dashboard/: accuracy.py  routes.py  schemas.py  service.py
backend/app/modules/elevenlabs/: routes.py
backend/app/modules/health/: routes.py
backend/app/modules/voice/: cms_client.py  events.py  routes.py  schemas.py  service.py
backend/app/modules/webhooks/: routes.py  schemas.py  service.py
backend/scripts/: preload_cms_providers.py
bland/: custom-tools.json  demo-script.md  elevenlabs-setup.md  pathway-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-old/: package-lock.json  package.json  tailwind.config.js
frontend-old/src/: api.js  index.css
frontend-old/src/components/: CallDetail.jsx  LoginPage.jsx
frontend/public/: test-elevenlabs.html
frontend/src/: App.jsx  App.tsx  api.js  index.css
frontend/src/lib/: api.ts
(+33 files in other folders)
