[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflect-health-demo"
version = "0.1.0"
description = "Reflect Health Voice AI Call Deflection Demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "beanie>=1.27.0",
    "pyjwt[crypto]>=2.8.0",
    "pymongo>=4.10.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "loguru>=0.7.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
